test/negative/send_sync_borrow_capture/compile.warn.hxml
-cp .
-lib reflaxe.rust
-main Main
-D rust_no_build
-D rust_output=out_warn
